Remove deprecated API.